# magicentry

./: .clippy.toml  .dockerignore  .gitignore  .ignore  404.html  AGENTS.md  CNAME  Cargo.toml  Dockerfile  Dockerfile.dev  README.md  build.rs  config.sample.toml  config.sample.yaml  configuration.html  development.html  devenv.nix  flake.nix  flows.html  index.html  installation.html  package-lock.json  package.json  pnpm-lock.yaml  print.html  searchindex.js  searchindex.json  shell.nix  tailwind.config.js  users.sample.yaml  webpack.config.js
.cargo/: config.toml
.github/: dependabot.yml
.github/workflows/: docker.yaml  docs.yaml  release.yaml  test.yaml
.sqlx/: query-02560786f2f9eeca18fcc6583c29a0f9b687081ac1d4952164b452ea64708d11.json  query-033099d1ce6830008729bcf2aed8f81a9824b3b76b7d20072e48d6a53c4254a3.json  query-0d1b5783a3d12e354670e02c09456a73efd2ebbe98c7093505b2da8091a4e9e0.json  query-175b274eabfe7b2eae30cd8d10b8261ff1d48ff602806d093fd25f232d4ed229.json  query-21c93da6349336a786ae2694c265489e3154ba7eb9ed25eeedf4af8b7b1eba94.json  query-33ade777c9eb3338f190988695a54d8f3cf59b7cacd7d41bbe96beb273c66c5b.json  query-377ce1825aee5528da7e3fb4534344345d4be4b398b6d91ad5085b69c63fee46.json  query-48706cf1bc715aba542dccf7a2d083a69dc9f398cc76e26ffa2336d7da974213.json  query-4e3a4346b599f6a8208d589f0cd009f59c8245c14405d48f2cff94d7ed24b5c5.json  query-5c7704a2301a94cb2b76d37631d2ba0fbed161d07804823ec7bffcb9d3fb2b53.json  query-5e3b28324342aa12f62ddb4fc1643c865679472b6bfa81c9c24268d1a5f3a201.json  query-5f3f8215a1d1016e4d5a37eeac5b453b4b5d3f9670165a9cdadb5542b0bace7a.json  query-631d54b28a06107b28739d10f39e6d3e5390b386eb4112f40854b8ffa1e3d860.json  query-6b27305592411c7399cc99d4658e017c806b39d53683b8fa0b19b943b8e6c45d.json  query-6d5d6489b3b98b5fc78db492724d3e4d7b6e24165787a941026ff7e2ff07a3bb.json  query-6d9065faccb9ae650ff59e43df977235651f789530fd069cffd368f5c41534b5.json  query-7c819455a25fd1346cf384b4f0c3c727871120a3a1da5966cfa4bd1973587c14.json  query-88de2073f4803237f99a201af894ffe2679957d7d12b2a414f42cd0ccec7a5d0.json  query-8b5c6cfca581230a8b11ea3ff35b2eea84a0c28484d844d63acd1a30e3028734.json  query-97be5238c386b33f616799c8010da3c8108adf0e08c85e42a659f562b6f22017.json  query-9b7048483fda6e8ed25e5e90fa8123c801bb305141f3da2a89d53eb65f06a38d.json  query-9c7521481bf857c51d7c395753e8fef96e74e419440b43ef5109d2914f309fca.json  query-9e24a513c1cf537f6d7fae38b66f77ae338e6f55e0ba53a7f8c9bf2a16a4b84b.json  query-a40aea522d1bbbd4158fa1949eb7afc36ecdb50068c6f8a3a5fea1bbd6289e99.json  query-a95a192043c7d3e54054a0e678e1b86839f1a41109423ae689732299373f98dd.json  query-d06d40c686d22c4f6d248332999908cdbb2c1bb0105decd2b8447b1bb668d0da.json  query-d07fe9c59476705712809efab3113bfab8f8bd902ef331925b2492e9ca6c14ac.json  query-d21ab8378b1e0516532b962764e708478ad5366d8e0a753cc264e4b87674a91d.json  query-d75efc9fc3174b05c72522c39e768273fac092506e81befaa6fbb03f23148375.json  query-e00a15c29e07b90fc88f287f069fddf0e85dde7fdf270ca1448a08937f269470.json  query-f53361014829c18b6f085baef75cff4ebb5f2b04ec0fa75d31307526cb134cf0.json  query-f823c4623e84017388761c1b091a5f154a388a456e46b9900d127e5f0104f5af.json  query-fa0e4c8e7bb2f708c8c2a6f886d206ecf832cb769dbdb6065373d6c360a79876.json  query-fa36d096da2fb404704f69da0141137cc44c31b6c640bcc7f58f5276f28a0d46.json
.zed/: settings.json
benches/: authurl_status.rs
chart/: Chart.yaml  values.yaml
chart/templates/: NOTES.txt  configmap.yaml  ingress.yaml  service.yaml  serviceaccount.yaml  statefulset.yaml
docs/: README.md  _sidebar.md  book.toml  configuration.md  flows.md  go.mod  go.sum  hugo.toml  index.html  installation.md
docs/content/: _index.md  configuration.md  flows.md  installation.md  search.md
docs/src/: SUMMARY.md  configuration.md  development.md  installation.md  introduction.md
hurl/: api_key.hurl  authurl.hurl  oidc.hurl  saml.hurl  ui.hurl
migrations/: 20240308140030_init.down.sql  20240310120523_oidc.down.sql  20240310120523_oidc.up.sql  20240315103135_code_challenge.down.sql  20240315103135_code_challenge.up.sql  20240319012903_tokens.up.sql  20241201000001_initial.sql  20251022142837_internal-user-secret-struct.sql
migrations/2024-03-07-153101_create_sessions/: up.sql
migrations/2024-03-07-153101_init/: up.sql
migrations/2024-03-07-153215_create_config/: up.sql
new-docs/: astro.config.mjs  astro.config.ts  package-lock.json  package.json
src/: app_build.rs  axum_main.rs  config.rs  config_kube.rs  database.rs  error.rs  handle_admin.rs  handle_api_key.rs  handle_index.rs  handle_login.rs  handle_login_action.rs  handle_login_link.rs  handle_login_page.rs  handle_login_post.rs  handle_logout.rs  handle_magic_link.rs  handle_proxied.rs  handle_static.rs  handle_status.rs  lib.rs  main.rs  model.rs  oidc.rs  oidc_model.rs  partials.rs  schema.rs  service.rs  token.rs  user.rs  user_store.rs  utils.rs
src/auth_url/: handle_response.rs  handle_status.rs  mod.rs
src/domain/: mod.rs  service.rs
src/error/: auth.rs  database.rs  mod.rs  oidc.rs  pages.rs  proxy.rs  webauthn.rs
src/oidc/: authorize_request.rs  client.rs  data.rs  handle_authorize.rs  handle_discover.rs  handle_jwks.rs  handle_token.rs  handle_userinfo.rs  mod.rs  model.rs
src/pages/: admin.rs  authorize.rs  error.rs  example.rs  index.rs  login.rs  login_action.rs  mod.rs  page_trait.rs  partials.rs
src/saml/: authn_request.rs  authn_response.rs  entity_descriptor.rs  handle_metadata.rs  handle_sso.rs  mod.rs  sign_response.rs  utils.rs
src/secret/: admin_token.rs  api_key.rs  browser_session.rs  cleanup.rs  ephemeral_primitive.rs  login_link.rs  metadata.rs  mod.rs  oidc_authcode.rs  oidc_token.rs  primitive.rs  proxy_code.rs  proxy_session.rs  webauthn_auth.rs  webauthn_reg.rs
src/tests/: config.rs  e2e_hurl.rs  flow_scoped.rs  hurl.rs  mod.rs  render_pages.rs  sql_users.rs
src/user_secret/: browser_session.rs  ephemeral_primitive.rs  ephemeral_secret.rs  link_login.rs  login.rs  login_link.rs  metadata.rs  mod.rs  (+7 more)
static/: authorize.html  error.html  index.html  login.html  login_action.html  logo.js  outer.html  webauthn.js
(+43 files in other folders)
