[package]
name = "magicentry"
version = "0.3.14"
edition = "2021"
rust-version = "1.77"

[features]
default = []
kube = [
	"dep:kube",
	"dep:k8s-openapi",
]

[dependencies]
actix-web = "4.8"
actix-session = { version = "0.9", features = ["cookie-session"] }
chrono = { version = "0.4", features = ["serde"] }
derive_more = "0.99.18"
duration-str = "0.11"
env_logger = "0.11"
formatx = "0.2"
futures = "0.3"
handlebars = { version = "5.1.2", features = ["dir_source"] }
hex = "0.4.3"
jwt-simple = { version = "0.12", default-features = false, features = ["pure-rust"] }
lazy_static = "1.5"
lettre = { version = "0.11", features = ["rustls-tls", "tokio1-rustls-tls", "builder", "pool", "smtp-transport"], default-features = false }
log = "0.4"
notify = "6"
rand = "0.8"
reindeer = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_qs = { version = "0.13", features = ["actix-web4"] }
serde_yaml = "0.9"
sha2 = "0.10"
tokio = { version = "1", features = ["full"] }
urlencoding = "2.1"
uuid = { version = "1.7", features = ["serde", "v4"] }
webauthn-rs = { version = "0.5.0", features = ["danger-allow-state-serialisation"] }
md5 = "0.7.0"

# Dependency of webauthn-rs that needs to be vendored
openssl = { version = "0.10", features = ["vendored"] }

# kube feature
kube = { version = "0.90", features = ["runtime", "derive"], optional = true }
k8s-openapi = { version = "0.21", features = ["latest"], optional = true }

[dev-dependencies]
scraper = "0.19.0"
