[package]
name = "magicentry"
version = "0.5.2"
edition = "2021"
rust-version = "1.77"

[features]
default = []
kube = ["dep:kube", "dep:k8s-openapi"]

[dependencies]
actix-web = "4.10"
actix-session = { version = "0.10", features = ["cookie-session"] }
chrono = { version = "0.4", features = ["serde"] }
derive_more = { version = "2.0", features = ["display", "error"] }
duration-str = "0.17"
env_logger = "0.11"
formatx = "0.2"
futures = "0.3"
handlebars = { version = "6.3.2", features = ["dir_source"] }
hex = "0.4.3"
jwt-simple = { version = "0.12", default-features = false, features = [
	"pure-rust",
] }
lazy_static = "1.5"
lettre = { version = "0.11", features = [
	"rustls-tls",
	"tokio1-rustls-tls",
	"builder",
	"pool",
	"smtp-transport",
], default-features = false }
log = "0.4"
notify = "8"
rand = "0.9"
reindeer = "0.3"
reqwest = { version = "0.12", default-features = false, features = [
	"rustls-tls",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_qs = { version = "0.14", features = ["actix-web4"] }
serde_yaml = "0.9"
sha2 = "0.10"
tokio = { version = "1", features = ["full"] }
urlencoding = "2.1"
uuid = { version = "1.16", features = ["serde", "v4"] }
webauthn-rs = { version = "0.5.0", features = [
	"danger-allow-state-serialisation",
] }
md5 = "0.7.0"

# Dependency of webauthn-rs that needs to be vendored
openssl = { version = "0.10", features = ["vendored"] }

# kube feature
kube = { version = "0.99", features = ["runtime", "derive"], optional = true }
k8s-openapi = { version = "0.24", features = ["v1_28"], optional = true }
actix-web-httpauth = "0.8"
flate2 = "1.1.1"
base64 = "0.22.1"
url = "2.5.4"
quick-xml = { version = "0.37.4", features = ["async-tokio", "serialize"] }

[dev-dependencies]
scraper = "0.23"
