[package]
name = "magicentry"
version = "0.7.1"
edition = "2024"

[features]
default = []
kube = ["dep:kube", "dep:k8s-openapi"]

[[bin]]
name = "axum"
path = "src/axum_main.rs"

[dependencies]
actix-web = "4.11"
actix-web-httpauth = "0.8"
serde_qs = { version = "0.15", features = ["actix-web4", "axum"] }
maud = { version = "0.27.0", features = ["actix-web", "axum"] }

chrono = { version = "0.4", features = ["serde"] }
derive_more = { version = "2.0", features = ["display", "error"] }
duration-str = "0.17"
formatx = "0.2"
futures = "0.3"
hex = "0.4.3"
lettre = { version = "0.11", default-features = false , features = [
	"rustls-tls",
	"tokio1-rustls-tls",
	"builder",
	"pool",
	"smtp-transport",
]}
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
notify = "8"
rand = "0.9"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid", "json"] }
reqwest = { version = "0.12", default-features = false, features = [
	"rustls-tls",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
sha2 = "0.10"
tokio = { version = "1", features = ["full"] }
url = { version = "2", features = ["serde"] }
urlencoding = "2.1"
uuid = { version = "1.18", features = ["serde", "v4"] }
webauthn-rs = { version = "0.5", features = ["danger-allow-state-serialisation"] }
md5 = "0.8.0"

# Dependency of webauthn-rs that needs to be vendored
openssl = { version = "0.10", features = ["vendored"] }

# kube feature
kube = { version = "0.99", features = ["runtime", "derive"], optional = true }
k8s-openapi = { version = "0.24", features = ["v1_28"], optional = true }
flate2 = "1.1"
base64 = "0.22"
quick-xml = { version = "0.38", features = ["async-tokio", "serialize"] }
rsa = { version = "0.9", features = ["sha2"] }
jsonwebtoken = { version = "10", default-features = false, features = ["rust_crypto"] }
async-trait = "0.1"
anyhow = "1.0"
thiserror = "2.0"

axum = { version = "0.8", features = ["http2", "macros", "tokio"] }
axum-extra = { version = "0.10", features = ["cookie", "form", "query", "typed-header", "typed-routing"] }
headers = "0.4"
tower-http = { version = "0.6", features = ["tokio", "trace"] }

[dev-dependencies]
actix-http = "3.11"
axum-test = { version = "18.1.0", features = ["reqwest", "typed-routing"] }

criterion = { version = "0.7.0", features = ["async_tokio"] }
scraper = "0.24"
tempfile = "3.23"
glob = "0.3"
tiny_http = "0.12"
# Use Hurl as a library to run E2E HTTP specs
# We intentionally put this under dev-dependencies so it's only pulled for tests
hurl = "*"
hurl_core = "*"

[[bench]]
name = "authurl_status"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = "symbols"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
option_if_let_else = "allow"
enum_glob_use = "deny"
# pedantic = "deny"
# nursery = "deny"
# unwrap_used = "deny"
